[package]
name = "kdtree"
version = "0.1.0"
authors = ["duster <dustier@foxmail.com>"]
description = "a simple implementation of KDTree, featuring tree building, point addition, knn querying"
keywords = ["kdtree", "knn"]
repository = "https://github.com/dustier/kdtree"
license="MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[dev-dependencies]
rand = "0.8.5"
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[[example]]
name="example"

